# OpenGLSelfStudy

./: .gitignore  CMakeLists.txt  README.md
resources/shader/: shader4.fs  shader5.fs  shader5.vs  shader5_light.fs  shader5_light.vs  shader6.fs
resources/shader/task10/: shader.fs  shader_light.fs
resources/shader/task11/: shader.fs
resources/shader/task12/: shader.fs  shader.vs
shader/: shader3.fs
src/: main.cpp
src/task/include/: AbstractShader.hpp  CameraGL.hpp  FileShader.hpp  Mesh.hpp  Model.hpp  StringShader.hpp  task1.hpp  task10.hpp  task11.hpp  task12.hpp  task2.hpp  task3.hpp  task4.hpp  task5.hpp  task6.hpp  task7.hpp  task8.hpp  task9.hpp
src/task/src/: AbstractShader.cpp  CameraGL.cpp  FileShader.cpp  Mesh.cpp  Model.cpp  StringShader.cpp  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
